--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Go
+name: build
 
 on:
   push:
@@ -8,29 +8,11 @@ on:
 jobs:
 
   build:
-    name: Build
     runs-on: ubuntu-latest
     steps:
-
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.14
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
-    - name: Build
-      run: go build -v .
-
-    - name: Test
-      run: go test -v ./...
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Build docker image
+        run: docker build . --target builder -t pgmasking-builder
+      - name: Run test
+        run: docker run pgmasking-builder go test -v ./...
