--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,13 @@ jobs:
         id: go
       - name: Check out code
         uses: actions/checkout@v2
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+          if [ -f Gopkg.toml ]; then
+              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+              dep ensure
+          fi
       - name: Run test
         run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
       - name: upload coverage to codecov
