--- a/docker-compose/postgres11.yml
+++ b/docker-compose/postgres11.yml
@@ -8,6 +8,7 @@ services:
       - postgres11
     environment:
       POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
     entrypoint: docker-compose/wait-for-postgres.sh postgres11
 
   postgres11:
