--- a/docker-compose/postgres12.yml
+++ b/docker-compose/postgres12.yml
@@ -8,6 +8,7 @@ services:
       - postgres12
     environment:
       POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
     entrypoint: docker-compose/wait-for-postgres.sh postgres12
 
   postgres12:
