--- a/docker-compose/postgres95.yml
+++ b/docker-compose/postgres95.yml
@@ -8,6 +8,7 @@ services:
       - postgres95
     environment:
       POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
     entrypoint: docker-compose/wait-for-postgres.sh postgres95
 
   postgres95:
