--- a/docker-compose/postgres96.yml
+++ b/docker-compose/postgres96.yml
@@ -8,6 +8,7 @@ services:
       - postgres96
     environment:
       POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
     entrypoint: docker-compose/wait-for-postgres.sh postgres96
 
   postgres96:
