--- a/docker-compose/postgres11.yml
+++ b/docker-compose/postgres11.yml
@@ -7,8 +7,9 @@ services:
     depends_on:
       - postgres11
     environment:
-      POSTGRES_PASSWORD: password
       POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_HOST: postgres11
     entrypoint: docker-compose/wait-for-postgres.sh postgres11
 
   postgres11:
