--- a/docker-compose/postgres96.yml
+++ b/docker-compose/postgres96.yml
@@ -7,8 +7,9 @@ services:
     depends_on:
       - postgres96
     environment:
-      POSTGRES_PASSWORD: password
       POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_HOST: postgres96
     entrypoint: docker-compose/wait-for-postgres.sh postgres96
 
   postgres96:
